fixing my image not showing on mobile

--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -63,36 +63,35 @@
     border: black 5px solid;
     border-radius: 5%;
 
-}
-
- }
- @media only screen and (max-width: 700px) {
-    .box3aicono{
-      margin: 5%;
-      width: 15%;
-      min-height: 10vh;
-      background:url(../images/myicon1.png) center no-repeat;
-      background-size: contain;
-    }
-    .box3bicono{
-      margin: 5%;
-      width: 15%;
-      min-height: 10vh;
-      background:url(../images/myicon2.png) center no-repeat;
-      background-size: contain;
-    }
-    .box3cicono{
-      margin: 5%;
-      width: 15%;
-      min-height: 10vh;
-      background:url(../images/myicon3.png) center no-repeat;
-      background-size: contain;
-    }
-    .box3texto{
-        width: 80%;
-        font-size: 12px;
-        color: #1c1c1c;
-        padding: 30px;;
-    }
-
   }
+
+  .box3aicono{
+    margin: 5%;
+    width: 15%;
+    min-height: 10vh;
+    background:url(../images/myicon1.png) center no-repeat;
+    background-size: contain;
+  }
+    
+  .box3bicono{
+    margin: 5%;
+     width: 15%;
+     min-height: 10vh;
+     background:url(../images/myicon2.png) center no-repeat;
+     background-size: contain;
+   }
+   .box3cicono{
+     margin: 5%;
+     width: 15%;
+     min-height: 10vh;
+     background:url(../images/myicon3.png) center no-repeat;
+     background-size: contain; 
+    }
+  .box3texto{
+      width: 80%;
+      font-size: 12px;
+      color: #1c1c1c;
+     padding: 30px;;
+    }
+
+}
